--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Chair Picker</title>
   </head>
-  <body>
+  <body style="
+    --black: hsl(0, 0%, 17%);
+    background-color: var(--black);
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+  ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="width: 100%; height: 100%;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
