--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -31,9 +31,11 @@
   <body style="
     --black: hsl(0, 0%, 20%);
     background-color: var(--black);
+    width: 100vw;
+    overflow-x: hidden;
   ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="width: 100%; height: 100%;"></div>
+    <div id="root" style="width: 100vw; overflow-x: hidden;"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
