pick candidates only from the last half of the list

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
     <title>Chair Picker</title>
   </head>
   <body style="
-    --black: hsl(0, 0%, 15%);
+    /* same colour as teams */
+    --black: hsl(0, 3.1%, 12.5%);
     background-color: var(--black);
     width: 100vw;
     overflow-x: hidden;
